# LI-7000

./: .Doxyfooter.html  LICENSE  README.md  class_li7000.py  dataheader.py  li7000.py  li7000_manual.py  pyproject.toml  test.py  test1.py
li7000/: __main__.py  li7000.py
